// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServerErrors component tests snapshot testing  1`] = `
<ServerErrors
  error="{
  \\"graphQLErrors\\": [],
  \\"networkError\\": {
    \\"name\\": \\"ServerError\\",
    \\"response\\": {},
    \\"statusCode\\": 500,
    \\"result\\": {
      \\"details\\": \\"Error id 51742367-8b20-48c0-9fd6-29774e8256f6-2, java.lang.RuntimeException: network error\\",
      \\"stack\\": \\"java.lang.RuntimeException: network error\\\\n\\\\tat org.kie.kogito.index.vertx.BlockingGraphqlRouterProducer.apolloWSHandler(BlockingGraphqlRouterProducer.java:51)\\\\n\\\\tat org.kie.kogito.index.vertx.BlockingGraphqlRouterProducer_RouteHandler_apolloWSHandler_08a09272f869f08e6baa194b6ae486ffb063912a.invoke(Unknown Source)\\\\n\\\\tat io.quarkus.vertx.web.runtime.RouteHandler.handle(RouteHandler.java:97)\\\\n\\\\tat io.quarkus.vertx.web.runtime.RouteHandler.handle(RouteHandler.java:22)\\\\n\\\\tat io.vertx.ext.web.impl.BlockingHandlerDecorator.lambda$handle$0(BlockingHandlerDecorator.java:48)\\\\n\\\\tat io.vertx.core.impl.ContextBase.lambda$null$0(ContextBase.java:137)\\\\n\\\\tat io.vertx.core.impl.ContextInternal.dispatch(ContextInternal.java:264)\\\\n\\\\tat io.vertx.core.impl.ContextBase.lambda$executeBlocking$1(ContextBase.java:135)\\\\n\\\\tat org.jboss.threads.ContextHandler$1.runWith(ContextHandler.java:18)\\\\n\\\\tat org.jboss.threads.EnhancedQueueExecutor$Task.run(EnhancedQueueExecutor.java:2449)\\\\n\\\\tat org.jboss.threads.EnhancedQueueExecutor$ThreadBody.run(EnhancedQueueExecutor.java:1478)\\\\n\\\\tat org.jboss.threads.DelegatingRunnable.run(DelegatingRunnable.java:29)\\\\n\\\\tat org.jboss.threads.ThreadLocalResettingRunnable.run(ThreadLocalResettingRunnable.java:29)\\\\n\\\\tat io.netty.util.concurrent.FastThreadLocalRunnable.run(FastThreadLocalRunnable.java:30)\\\\n\\\\tat java.base/java.lang.Thread.run(Thread.java:829)\\"
    }
  },
  \\"message\\": \\"Network error: Response not successful: Received status code 500\\"
}"
  variant="large"
>
  <PageSection
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <Bullseye
        data-ouia-component-type="server-errors"
        data-ouia-safe={true}
      >
        <div
          className="pf-l-bullseye"
          data-ouia-component-type="server-errors"
          data-ouia-safe={true}
        >
          <EmptyState
            variant="full"
          >
            <div
              className="pf-c-empty-state"
            >
              <div
                className="pf-c-empty-state__content"
              >
                <EmptyStateIcon
                  color="var(--pf-global--danger-color--100)"
                  icon={[Function]}
                >
                  <ExclamationCircleIcon
                    aria-hidden="true"
                    className="pf-c-empty-state__icon"
                    color="var(--pf-global--danger-color--100)"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby={null}
                      className="pf-c-empty-state__icon"
                      fill="var(--pf-global--danger-color--100)"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      />
                    </svg>
                  </ExclamationCircleIcon>
                </EmptyStateIcon>
                <Title
                  headingLevel="h1"
                  size="4xl"
                >
                  <h1
                    className="pf-c-title pf-m-4xl"
                    data-ouia-component-id="OUIA-Generated-Title-1"
                    data-ouia-component-type="PF4/Title"
                    data-ouia-safe={true}
                  >
                    Error fetching data
                  </h1>
                </Title>
                <EmptyStateBody>
                  <div
                    className="pf-c-empty-state__body"
                  >
                    An error occurred while accessing data. It is possible the data index is still being loaded, please try again in a few moments.
                     
                    <Button
                      id="display-error"
                      isInline={true}
                      onClick={[Function]}
                      variant="link"
                    >
                      <ButtonBase
                        id="display-error"
                        innerRef={null}
                        isInline={true}
                        onClick={[Function]}
                        variant="link"
                      >
                        <button
                          aria-disabled={false}
                          aria-label={null}
                          className="pf-c-button pf-m-link pf-m-inline"
                          data-ouia-component-id="OUIA-Generated-Button-link-1"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe={true}
                          disabled={false}
                          id="display-error"
                          onClick={[Function]}
                          role={null}
                          type="button"
                        >
                          See more details
                        </button>
                      </ButtonBase>
                    </Button>
                  </div>
                </EmptyStateBody>
              </div>
            </div>
          </EmptyState>
        </div>
      </Bullseye>
    </section>
  </PageSection>
</ServerErrors>
`;

exports[`ServerErrors component tests snapshot testing with small variant  1`] = `
<ServerErrors
  error="{
  \\"graphQLErrors\\": [],
  \\"networkError\\": {
    \\"name\\": \\"ServerError\\" 
  },
  \\"message\\": \\"Network error: Response not successful: Received status code 500\\"
}"
  variant="small"
>
  <Bullseye
    data-ouia-component-type="server-errors"
    data-ouia-safe={true}
  >
    <div
      className="pf-l-bullseye"
      data-ouia-component-type="server-errors"
      data-ouia-safe={true}
    >
      <EmptyState
        variant="full"
      >
        <div
          className="pf-c-empty-state"
        >
          <div
            className="pf-c-empty-state__content"
          >
            <EmptyStateIcon
              color="var(--pf-global--danger-color--100)"
              icon={[Function]}
            >
              <ExclamationCircleIcon
                aria-hidden="true"
                className="pf-c-empty-state__icon"
                color="var(--pf-global--danger-color--100)"
                noVerticalAlign={false}
                size="sm"
              >
                <svg
                  aria-hidden="true"
                  aria-labelledby={null}
                  className="pf-c-empty-state__icon"
                  fill="var(--pf-global--danger-color--100)"
                  height="1em"
                  role="img"
                  style={
                    Object {
                      "verticalAlign": "-0.125em",
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                  />
                </svg>
              </ExclamationCircleIcon>
            </EmptyStateIcon>
            <Title
              headingLevel="h1"
              size="4xl"
            >
              <h1
                className="pf-c-title pf-m-4xl"
                data-ouia-component-id="OUIA-Generated-Title-4"
                data-ouia-component-type="PF4/Title"
                data-ouia-safe={true}
              >
                Error fetching data
              </h1>
            </Title>
            <EmptyStateBody>
              <div
                className="pf-c-empty-state__body"
              >
                An error occurred while accessing data. It is possible the data index is still being loaded, please try again in a few moments.
                 
                <Button
                  id="display-error"
                  isInline={true}
                  onClick={[Function]}
                  variant="link"
                >
                  <ButtonBase
                    id="display-error"
                    innerRef={null}
                    isInline={true}
                    onClick={[Function]}
                    variant="link"
                  >
                    <button
                      aria-disabled={false}
                      aria-label={null}
                      className="pf-c-button pf-m-link pf-m-inline"
                      data-ouia-component-id="OUIA-Generated-Button-link-4"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe={true}
                      disabled={false}
                      id="display-error"
                      onClick={[Function]}
                      role={null}
                      type="button"
                    >
                      See more details
                    </button>
                  </ButtonBase>
                </Button>
              </div>
            </EmptyStateBody>
          </div>
        </div>
      </EmptyState>
    </div>
  </Bullseye>
</ServerErrors>
`;

exports[`ServerErrors component tests snapshot with children  1`] = `
<ServerErrors
  error="{
  \\"graphQLErrors\\": [],
  \\"networkError\\": {
    \\"name\\": \\"ServerError\\",
    \\"response\\": {},
    \\"statusCode\\": 500,
    \\"result\\": {
      \\"details\\": \\"Error id 51742367-8b20-48c0-9fd6-29774e8256f6-2, java.lang.RuntimeException: network error\\",
      \\"stack\\": \\"java.lang.RuntimeException: network error\\\\n\\\\tat org.kie.kogito.index.vertx.BlockingGraphqlRouterProducer.apolloWSHandler(BlockingGraphqlRouterProducer.java:51)\\\\n\\\\tat org.kie.kogito.index.vertx.BlockingGraphqlRouterProducer_RouteHandler_apolloWSHandler_08a09272f869f08e6baa194b6ae486ffb063912a.invoke(Unknown Source)\\\\n\\\\tat io.quarkus.vertx.web.runtime.RouteHandler.handle(RouteHandler.java:97)\\\\n\\\\tat io.quarkus.vertx.web.runtime.RouteHandler.handle(RouteHandler.java:22)\\\\n\\\\tat io.vertx.ext.web.impl.BlockingHandlerDecorator.lambda$handle$0(BlockingHandlerDecorator.java:48)\\\\n\\\\tat io.vertx.core.impl.ContextBase.lambda$null$0(ContextBase.java:137)\\\\n\\\\tat io.vertx.core.impl.ContextInternal.dispatch(ContextInternal.java:264)\\\\n\\\\tat io.vertx.core.impl.ContextBase.lambda$executeBlocking$1(ContextBase.java:135)\\\\n\\\\tat org.jboss.threads.ContextHandler$1.runWith(ContextHandler.java:18)\\\\n\\\\tat org.jboss.threads.EnhancedQueueExecutor$Task.run(EnhancedQueueExecutor.java:2449)\\\\n\\\\tat org.jboss.threads.EnhancedQueueExecutor$ThreadBody.run(EnhancedQueueExecutor.java:1478)\\\\n\\\\tat org.jboss.threads.DelegatingRunnable.run(DelegatingRunnable.java:29)\\\\n\\\\tat org.jboss.threads.ThreadLocalResettingRunnable.run(ThreadLocalResettingRunnable.java:29)\\\\n\\\\tat io.netty.util.concurrent.FastThreadLocalRunnable.run(FastThreadLocalRunnable.java:30)\\\\n\\\\tat java.base/java.lang.Thread.run(Thread.java:829)\\"
    }
  },
  \\"message\\": \\"Network error: Response not successful: Received status code 500\\"
}"
  variant="large"
>
  <PageSection
    variant="light"
  >
    <section
      className="pf-c-page__main-section pf-m-light"
    >
      <Bullseye
        data-ouia-component-type="server-errors"
        data-ouia-safe={true}
      >
        <div
          className="pf-l-bullseye"
          data-ouia-component-type="server-errors"
          data-ouia-safe={true}
        >
          <EmptyState
            variant="full"
          >
            <div
              className="pf-c-empty-state"
            >
              <div
                className="pf-c-empty-state__content"
              >
                <EmptyStateIcon
                  color="var(--pf-global--danger-color--100)"
                  icon={[Function]}
                >
                  <ExclamationCircleIcon
                    aria-hidden="true"
                    className="pf-c-empty-state__icon"
                    color="var(--pf-global--danger-color--100)"
                    noVerticalAlign={false}
                    size="sm"
                  >
                    <svg
                      aria-hidden="true"
                      aria-labelledby={null}
                      className="pf-c-empty-state__icon"
                      fill="var(--pf-global--danger-color--100)"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <path
                        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                      />
                    </svg>
                  </ExclamationCircleIcon>
                </EmptyStateIcon>
                <Title
                  headingLevel="h1"
                  size="4xl"
                >
                  <h1
                    className="pf-c-title pf-m-4xl"
                    data-ouia-component-id="OUIA-Generated-Title-2"
                    data-ouia-component-type="PF4/Title"
                    data-ouia-safe={true}
                  >
                    Error fetching data
                  </h1>
                </Title>
                <EmptyStateBody>
                  <div
                    className="pf-c-empty-state__body"
                  >
                    An error occurred while accessing data. It is possible the data index is still being loaded, please try again in a few moments.
                     
                    <Button
                      id="display-error"
                      isInline={true}
                      onClick={[Function]}
                      variant="link"
                    >
                      <ButtonBase
                        id="display-error"
                        innerRef={null}
                        isInline={true}
                        onClick={[Function]}
                        variant="link"
                      >
                        <button
                          aria-disabled={false}
                          aria-label={null}
                          className="pf-c-button pf-m-link pf-m-inline"
                          data-ouia-component-id="OUIA-Generated-Button-link-2"
                          data-ouia-component-type="PF4/Button"
                          data-ouia-safe={true}
                          disabled={false}
                          id="display-error"
                          onClick={[Function]}
                          role={null}
                          type="button"
                        >
                          See more details
                        </button>
                      </ButtonBase>
                    </Button>
                  </div>
                </EmptyStateBody>
                <Button
                  onClick={[MockFunction]}
                >
                  <ButtonBase
                    innerRef={null}
                    onClick={[MockFunction]}
                  >
                    <button
                      aria-disabled={false}
                      aria-label={null}
                      className="pf-c-button pf-m-primary"
                      data-ouia-component-id="OUIA-Generated-Button-primary-1"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe={true}
                      disabled={false}
                      onClick={[MockFunction]}
                      role={null}
                      type="button"
                    >
                      Go back
                    </button>
                  </ButtonBase>
                </Button>
              </div>
            </div>
          </EmptyState>
        </div>
      </Bullseye>
    </section>
  </PageSection>
</ServerErrors>
`;
